@@ -19,13 +19,13 @@ i=0
 while [ -e $1/sip$i ]
 do
     filename=$1/sip$i
-    ./torture_test $filename $2
+    valgrind --tool=memcheck --leak-check=yes --leak-resolution=high --show-reachable=yes -q --error-exitcode=1 ./torture_test $filename $2 2>&1 
 
     code=$?
     if [ "$code" -eq 0 ]; then
-	ok=`expr $ok + 1`;
+	vok=`expr $vok + 1`;
     else
-	nok=`expr $nok + 1`
+	vnok=`expr $vnok + 1`
     fi;
 
     i=`expr $i + 1`
@@ -36,13 +36,13 @@ i=0
 while [ -e $1/sip-malformed$i ]
 do
     filename=$1/sip-malformed$i
-    ./torture_test $filename $2
+    valgrind --tool=memcheck --leak-check=yes --leak-resolution=high --show-reachable=yes -q --error-exitcode=1 ./torture_test $filename $2 2>&1 
 
     code=$?
     if [ "$code" -eq 0 ]; then
-	ok=`expr $ok + 1`;
+	vok=`expr $vok + 1`;
     else
-	nok=`expr $nok + 1`
+	vnok=`expr $vnok + 1`
     fi;
 
     i=`expr $i + 1`
@@ -50,7 +50,8 @@ do
 done
 #
 
-echo "unit testing total :   $total"
-echo "unit testing passed:   $ok"
-echo "unit testing failed:   $nok"
+echo "unit testing total          :   $total"
+echo "valgrind unit testing passed:   $vok"
+echo "valgrind unit testing failed:   $vnok (valgrind + standard errors combined)"
+
 
