@@ -1,4 +1,4 @@
-Oct 2015    : 5.0.0
+Oct 2015    : 5.0.0 and later
 	This file is not maintained. oSIP is stil under dev. Keep looking
 	at the git on http://savannah.gnu.org/git/?group=osip and ChangeLog.
 
