@@ -1,4 +1,5 @@
-libosip2 (5.1.2) - 2020-07-24
+libosip2 (5.1.2) - 2020-07-26
+	* add "make valgrind" to run valgrind test. "make check" only runs without valgrind.
 	* new style format using clang-format
 	* timers for event will trigger when time is equal (not 1ms after). change required for libeXosip2-5.1.2.
 	* add detection of localtime // simplify logs and use readable time in it.
